Fix css alignments in signup

--- a/inskrap-frontend/src/renderer/Components/signup.css
+++ b/inskrap-frontend/src/renderer/Components/signup.css
@@ -91,3 +91,11 @@
   display: flex;
   gap: 1rem;
 }
+
+.centered-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
